[package]
name = "transactions-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
chrono = "0.4.41"
